force-app/main/default/objects/BillingRule__c/BillingRule__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Politique configurable qui pilote la fréquence, la période et les conditions de génération des factures.</description><enableReports>true</enableReports><label>Règle de facturation</label><nameField><label>Nom de la règle</label><type>Text</type></nameField><pluralLabel>Règles de facturation</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>