force-app/main/default/objects/BillingRule__c/fields/AutoIssue__c.field-meta.xml
<CustomField><fullName>AutoIssue__c</fullName><defaultValue>false</defaultValue><description>Émet et verrouille automatiquement les factures générées par le traitement planifié.</description><label>Émission automatique</label><type>Checkbox</type></CustomField>