force-app/main/default/objects/BillingRule__c/fields/BillingDay__c.field-meta.xml
<CustomField><fullName>BillingDay__c</fullName><defaultValue>1</defaultValue><label>Jour de facturation</label><precision>2</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>