force-app/main/default/objects/BillingRule__c/fields/BillingEntity__c.field-meta.xml
<CustomField><fullName>BillingEntity__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Entité de facturation</label><referenceTo>BillingEntity__c</referenceTo><relationshipLabel>Règles de facturation</relationshipLabel><relationshipName>BillingRules</relationshipName><required>false</required><type>Lookup</type></CustomField>