force-app/main/default/objects/BillingRule__c/fields/BillingFrequency__c.field-meta.xml
<CustomField><fullName>BillingFrequency__c</fullName><label>Fréquence</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>OneTime</fullName><default>true</default><label>Une fois</label></value><value><fullName>Monthly</fullName><default>false</default><label>Mensuelle</label></value><value><fullName>Quarterly</fullName><default>false</default><label>Trimestrielle</label></value><value><fullName>Semiannual</fullName><default>false</default><label>Semestrielle</label></value><value><fullName>Annual</fullName><default>false</default><label>Annuelle</label></value></valueSetDefinition></valueSet></CustomField>