force-app/main/default/objects/BillingRule__c/fields/BillingType__c.field-meta.xml
<CustomField><fullName>BillingType__c</fullName><label>Type de facturation</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Advance</fullName><default>true</default><label>À échoir (avance)</label></value><value><fullName>Arrears</fullName><default>false</default><label>À terme échu</label></value></valueSetDefinition></valueSet></CustomField>