force-app/main/default/objects/BillingRule__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Description</label><required>false</required><type>TextArea</type></CustomField>