force-app/main/default/objects/BillingRule__c/fields/PaymentTermsDays__c.field-meta.xml
<CustomField><fullName>PaymentTermsDays__c</fullName><defaultValue>30</defaultValue><label>Délai de paiement (jours)</label><precision>3</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>