force-app/main/default/objects/BillingRule__c/fields/PeriodBoundary__c.field-meta.xml
<CustomField><fullName>PeriodBoundary__c</fullName><label>Alignement des périodes</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Anniversary</fullName><default>true</default><label>Date anniversaire</label></value><value><fullName>Calendar</fullName><default>false</default><label>Calendrier civil</label></value></valueSetDefinition></valueSet></CustomField>