force-app/main/default/objects/BillingRule__c/validationRules/BillingDayRange.validationRule-meta.xml
<ValidationRule><fullName>BillingDayRange</fullName><active>true</active><errorConditionFormula>OR(BillingDay__c &lt; 1, BillingDay__c &gt; 28)</errorConditionFormula><errorDisplayField>BillingDay__c</errorDisplayField><errorMessage>Le jour de facturation doit être compris entre 1 et 28.</errorMessage></ValidationRule>